inserted content in the readme file

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
             <div class="info">
                 <h3>INSTRUCTIONS</h3>
                 <ul>
-                    <li>Select and set up to 5 tasks to accomplish for the day.</li>
-                    <li>Come back at night to check them off.</li>
+                    <li>Select and set up-to 5 tasks to accomplish for the day.</li>
+                    <li>Come back around 8pm to check them off.</li>
                 </ul>
             </div>
         </div>
