added a view selected tasks container on countdown screen

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,12 @@
                 <div>Come back in</div>
                 <span id="hr">0</span>hr <span id="min">0</span>min <span id="sec">0</span>sec
             </div>
+            <div class="viewTasks">View selected tasks</div>
+            <div>
+                <ul>
+                    <i><h3>Live Tasks</h3></i>
+                </ul>
+            </div>
         </div>
         <div class="checkoutCont">
             <h3>Did you complete the daily task?</h3>
