--- a/static/style/dpa.css
+++ b/static/style/dpa.css
@@ -5,6 +5,10 @@
     padding: 0;
     font-family: "Roboto", "Poppins", sans-serif;
 }
+:root {
+    --pri: green;
+    --size: 1rem;
+}
 #landing {
     display: flex;
     flex-direction: column;
@@ -328,7 +332,7 @@ footer .x:hover {
     width: 150px;
     height: 150px;
 }
-#index main .timerCont div {
+#index main .timerCont .countDown {
     background: linear-gradient(90deg, purple, pink);
     width: fit-content;
     font-size: xx-large;
@@ -336,6 +340,45 @@ footer .x:hover {
     margin: auto;
     -webkit-background-clip: text;
     color: transparent;
+}
+#index main .timerCont .viewTasks {
+    background-color: lightgray;
+    margin: auto;
+    margin-top: 10px;
+    padding: 2px 40px;
+    width: 200px;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+#index main .timerCont .viewTasks:hover {
+    background-color: gray;
+    color: lightgray;
+}
+#index main .timerCont .viewTasks + div {
+    overflow: hidden;
+    width: fit-content;
+    margin: auto;
+    padding: 8px;
+}
+#index main .timerCont .viewTasks + div ul {
+    margin-top: -125%;
+    background-color: gray;
+    color: lightgray;
+    padding: 10px;
+}
+#index main .timerCont .viewTasks + div ul h3 {
+    font-weight: bolder;
+    color: white;
+    margin-bottom: 3px;
+    text-decoration: underline;
+}
+#index main .timerCont .viewTasks + div ul.slideOut {
+    animation: slideOut 1s forwards;
+}
+@keyframes slideOut {
+    to {
+        margin-top: 0;
+    }
 }
 #index main form .choices_1 {
     display: grid;
