--- a/static/style/dpa.css
+++ b/static/style/dpa.css
@@ -145,6 +145,12 @@ footer .x:hover {
 }
 
 /* styling for index page */
+#index {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
 #index main {
     position: relative;
 }
@@ -152,7 +158,6 @@ footer .x:hover {
     justify-content: center;
     background-color: lightblue;
     margin-bottom: 2rem;
-    width: 100vw;
 }
 #index header div {
     display: block;
@@ -174,18 +179,18 @@ footer .x:hover {
 #index #checkBugger + label {
     display: block;
     position: absolute;
-    top: -25px;
+    top: -53px;
     left: 5px;
     z-index: 18;
 }
 #index main .sideBar {
-    position: absolute;
-    top: -32px;
+    position: fixed;
+    top: 94px;
     left: 0;
     background: linear-gradient(rgb(25, 144, 255), white);
     z-index: 17;
     width: 250px;
-    height: 120%;
+    height: 60%;
     padding: 5px;
     padding-top: 20px;
     transform: translateX(-100%);
