--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <meta property="og:description" content="fun app that keeps track of your daily health goals">
         <meta property="og:title" content="Daily Positive Actions">
-        <meta property="og:image" content="{{ url_for('static', filename='one-decision-logo.png') }}">
+        <meta property="og:image" content="{{ url_for('static', filename='dpa_logo.png') }}, _external=True">
         <title>DPA</title>
         <script src="{{ url_for('static', filename='js/dpa.js') }}"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='style/dpa.css') }}">
