--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,7 +4,7 @@
 
     <header>
         <div>
-            <img src="{{ url_for('static', filename='images/one-decision-logo.png') }}" alt="logo">
+            <img src="{{ url_for('static', filename='images/dpa_logo.png') }}" alt="logo">
             <h4>DAILY POSITIVE ACTIONS</h4>
         </div>
         <h5>We Help You Become Progressively Better.</h5>
