--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,11 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <meta property="og:description" content="fun app that keeps track of your daily health goals">
         <meta property="og:title" content="Daily Positive Actions">
-        <meta property="og:image" content="{{ url_for('static', filename='dpa_logo.png') }}, _external=True">
+        <meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}">
+        <meta property="og:image:width" content="600">
+        <meta property="og:image:height" content="600">
+        <meta property="og:image:alt" content="Site Logo">
+        <meta property="og:image:type" content="image/jpeg">
         <title>DPA</title>
         <script src="{{ url_for('static', filename='js/dpa.js') }}"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='style/dpa.css') }}">
