--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,10 @@
             <img src="{{ url_for('static', filename='images/dpa_logo.png') }}" alt="logo">
             <h4>DAILY POSITIVE ACTIONS</h4>
         </div>
+        <div id="connectWallet">
+            <img src="{{ url_for('static', filename='images/wallet_btc_w.png') }}" alt="btc_wallet">
+            <div>Connect Wallet</div>
+        </div>
     </header>
     <main>
         <input type="checkbox" id="checkBugger">
