--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,10 @@
         <label for="checkBugger"><img class="hambugger" src="{{ url_for('static', filename='images/hambugger2.png') }}" alt="hambugger menu"></label>
         <div class="sideBar">
             <div class="streak">
+                <img src="{{ url_for('static', filename='images/left-arrow.png') }}" alt="left-arrow">
                 <div class="month">Month</div>
                 <div class="day">Day</div>
-                <img src="{{ url_for('static', filename='images/checkmark.png') }}" alt="checkmark">
+                <img class="checkImg" src="{{ url_for('static', filename='images/checkmark.png') }}" alt="checkmark">
             </div>
             <div class="streakCount">
                 <h3>Streak:</h3>
