extra lil update

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
             </div>
         </form>
         <div class="noTasks">
-            <div>TASKS WILL BE VISIBLE BY TOMORROW</div>
+            <div>YOU'VE COMPLETED YOUR DAILY TASKS</div>
         </div>
         <div class="timerCont">
             <img src="{{ url_for('static', filename='images/timer2.gif') }}" alt="timer">
