--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                 </div>
             </form>
             <div class="noTasks">
-                <div>IT'S PASSED 8PM, PLEASE COME BACK TOMORROW 😊</div>
+                <div>PLEASE COME BACK TOMORROW MORNING FOR MORE TASKS 😊</div>
             </div>
             <div class="timerCont">
                 <img src="{{ url_for('static', filename='images/timer2.gif') }}" alt="timer">
