--- a/templates/index.html
+++ b/templates/index.html
@@ -78,6 +78,7 @@
                 <div class="countDown">
                     <div>Come back in</div>
                     <span id="hr">0</span>hr <span id="min">0</span>min <span id="sec">0</span>sec
+                    <div>to check out for the day</div>
                 </div>
                 <div class="viewTasks">View selected tasks</div>
                 <div>
