fixed a streak bug issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,10 @@
                         <li>Select and set up-to 5 tasks to accomplish for the day.</li>
                         <li>Come back around 8pm to check them off.</li>
                         <li>Connect EVM wallet to store your activities on Base L2</li>
+                        <div id="note">Note: streaks are assigned after a successful check out.</div>
                     </ul>
                 </div>
             </div>
-            
             <form>
                 <img class="load" src="{{ url_for('static', filename='images/Loading3.gif') }}" alt="loading_3">
                 <div class="choices_1">
