--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,11 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <meta property="og:description" content="fun app that keeps track of your daily health goals">
         <meta property="og:title" content="Daily Positive Actions">
-        <meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}">
+        <!-- <meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}"> -->
+        <meta property="og:image" content="https://dpa.r2-w3.fun/static/images/dpa_logo.jpeg">
         <meta property="og:image:width" content="600">
         <meta property="og:image:height" content="600">
-        <meta property="og:image:alt" content="Site Logo">
+        <meta property="og:image:alt" content="DPA Site Logo">
         <meta property="og:image:type" content="image/jpeg">
         <title>DPA</title>
         <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.1/dist/ethers.umd.min.js"></script>
