--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,9 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <meta property="og:description" content="fun app that keeps track of your daily health goals">
         <meta property="og:title" content="Daily Positive Actions">
-<<<<<<< HEAD
-<<<<<<< HEAD
         <!-- <meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}"> -->
         <meta property="og:image" content="https://dpa.r2-w3.fun/static/images/dpa_logo.jpeg">
-=======
-<<<<<<< HEAD
-=======
->>>>>>> 09e5d96b (updating local repo)
-        <meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}">
->>>>>>> 2140c10f (updating local repo)
+        <!--<meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}">-->
         <meta property="og:image:width" content="600">
         <meta property="og:image:height" content="600">
         <meta property="og:image:alt" content="DPA Site Logo">
