added a base verify head tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
         <meta property="og:image:height" content="600">
         <meta property="og:image:alt" content="DPA Site Logo">
         <meta property="og:image:type" content="image/jpeg">
+        <meta name="base:app_id" content="697a0fbf2dbd4b464042ae1b" />
         <title>DPA</title>
         <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.1/dist/ethers.umd.min.js"></script>
         <script src="{{ url_for('static', filename='js/dpa.js') }}"></script>
