added a base verify head tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <meta property="og:description" content="fun app that keeps track of your daily health goals">
         <meta property="og:title" content="Daily Positive Actions">
+        <meta 
+            name="base:app_id" 
+            content="697a0fbf2dbd4b464042ae1b" 
+        />
         <!-- <meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}"> -->
         <meta property="og:image" content="https://dpa.r2-w3.fun/static/images/dpa_logo.jpeg">
         <!--<meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}">-->
@@ -12,7 +16,6 @@
         <meta property="og:image:height" content="600">
         <meta property="og:image:alt" content="DPA Site Logo">
         <meta property="og:image:type" content="image/jpeg">
-        <meta name="base:app_id" content="697a0fbf2dbd4b464042ae1b" />
         <title>DPA</title>
         <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.1/dist/ethers.umd.min.js"></script>
         <script src="{{ url_for('static', filename='js/dpa.js') }}"></script>
