--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,7 @@
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <meta property="og:description" content="fun app that keeps track of your daily health goals">
         <meta property="og:title" content="Daily Positive Actions">
-        <meta 
-            name="base:app_id" 
-            content="697a0fbf2dbd4b464042ae1b" 
-        />
+        <meta name="base:app_id" content="697a0fbf2dbd4b464042ae1b">
         <!-- <meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}"> -->
         <meta property="og:image" content="https://dpa.r2-w3.fun/static/images/dpa_logo.jpeg">
         <!--<meta property="og:image" content="{{ url_for('static', filename='images/dpa_logo.jpeg', _external=True) }}">-->
