--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
                     <div class="outcome">
                         <div><span>0</span><span>%</span></div>
                         <div class="perform">How did you do?</div>
-                        <img id="cancel" src="{{ url_for('static', filename='images/cancel.png') }}" alt="cancel">
+                        <button id="cancel"><h4>Check Out</h4><div><img src="{{ url_for('static', filename='images/loading4.gif') }}" alt="gif"></div></button>
                         <img id="outcomeLoader" src="{{ url_for('static', filename='images/Loading3.gif') }}" alt="loader">
                         <img id="confetti" src="{{ url_for('static', filename='images/Confetti.gif') }}" alt="confetti">
                         <audio id="confettiPop" src="{{ url_for('static', filename='sounds/confetti_pop.mp3') }}" type="audio/mpeg"></audio>
